# trace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  evaluate_gradient.py  expression.cpp  generate_gf.py  gradient.cpp  loadExternal.cmake  main.cpp  plot_rays.py  print_critical.cpp  prototype.cpp  prototype_absorb.cpp  trace.cpp  trace_config.cpp  trace_config.h  utils.cmake
cmake/: External.cmake  loadExternal.cmake
run/: broken_mesh.stl  broken_mesh.vtk  broken_mesh_edit.vtk  mesh.json  mesh.stl  mesh.vtk  new_mesh.vtk  ray.json  ray_my.json  test_mesh.vtk
run/analytic/: error512.py  gen_configs.py  trajectory_error.py
run/analytic/input/: config.yaml  density.gf  ionization.gf  mesh.mesh  temperature.gf
run/analytic_grad/: analytic_grad.py
run/hous_grad/input/: config.yaml
run/hous_lin_grad/input/: config.yaml
run/hous_sin_grad/: conv.py
run/hous_sin_grad/input/: config.yaml
run/integral_grad/input/: config.yaml
run/integral_lin_grad/: conv.py
run/integral_lin_grad/input/: config.yaml
run/integral_sin_grad/: conv.py
run/integral_sin_grad/input/: config.yaml
run/laser_30_deg/input/: config.yaml
run/mfem_lin_grad/: conv.py
run/mfem_lin_grad/input/: config.yaml
run/mfem_sin_grad/: conv.py
run/mfem_sin_grad/input/: config.yaml
run/oliva200/: plot_rays.py
run/oliva200/input/: config.yaml  density.gf  ionization.gf  mesh.vtk
run/print_n/: eval_diff.py
run/print_n/input/: config.yaml  gain.gf  mesh.vtk  temperature.gf
run/res_angle_dep/input/: config.yaml  density.gf  mesh.mesh
run/simple_compare/input/: config.yaml
run/x_ray_5_mrad/input/: config.yaml  ionization.gf  mesh.mesh
run/x_ray_parallel/input/: config.yaml  gain.gf  temperature.gf
scripts/: plot_points.py  plot_result.py  vis_utils.py
